# bebop2_interface

driver_bebop2/: .gitignore  CMakeLists.txt  Sign convention  package.xml
driver_bebop2/launch/: driverBebopROSModule.launch
driver_bebop2/src/include/: droneInps.h  droneOuts.h
driver_bebop2/src/source/: droneAltitudeNode.cpp  droneBatteryNode.cpp  droneBottomCameraNode.cpp  droneCommandNode.cpp  droneFrontCameraNode.cpp  droneGimbalNode.cpp  droneGroundSpeedNode.cpp  droneInps.cpp  droneOuts.cpp  droneRotationAnglesNode.cpp  droneStatusNode.cpp  droneWifiChannelNode.cpp  imuFreqIncreased.cpp
subpackages/bebop_autonomy/bebop_tools/: package.xml
